# prog

./: .gitignore  Cargo.toml  README.md  build  prog.py  prog.yml  setup.py
.github/workflows/: pylint.yml
prog/: .gitignore  cli.py  commands.py  parse.py  prog.yml  util.py
src/: alias.rs  cli.rs  command.rs  config.rs  convert.rs  exec.rs  generate.rs  invoc.rs  lex.rs  main.rs  parse.rs  prelude.rs
templates/: cargo.yml  cmake.yml  go.yml  make.yml  node.yml  python.yml
