[package]
name = "prog"
version = "0.2.0"
edition = "2021"
include = ["templates/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.3", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.5.4"
serde = "1.0.136"
serde_any = "0.5.0"
